// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/NavScroll Menu Inline 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      className="inline-menu"
    >
      <div
        className="link-list-wrapper"
      >
        <ul
          className="link-list"
        >
          <li>
            <a
              aria-controls="collapseOne"
              aria-expanded="false"
              className="list-item large medium right-icon collapsed"
              data-toggle="collapse"
              href="#collapseOne"
              onClick={[Function]}
            >
              <span>
                Link list 1
              </span>
              <svg
                className="icon icon-primary icon-sm sm"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6 15.4L6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                />
              </svg>
            </a>
            <ul
              className="link-sublist collapse"
              id="collapseOne"
            >
              <li>
                <a
                  className="list-item"
                  href="#"
                >
                  <span>
                    Link list 1
                  </span>
                </a>
              </li>
              <li>
                <a
                  className="list-item"
                  href="#"
                >
                  <span>
                    Link list 1
                  </span>
                </a>
              </li>
              <li>
                <a
                  className="list-item"
                  href="#"
                >
                  <span>
                    Link list 1
                  </span>
                </a>
              </li>
            </ul>
          </li>
          <li>
            <a
              aria-controls="collapseTwo"
              aria-expanded="false"
              className="list-item large medium right-icon collapsed"
              data-toggle="collapse"
              href="#collapseTwo"
              onClick={[Function]}
            >
              <span>
                Link list 2
              </span>
              <svg
                className="icon icon-primary icon-sm sm"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6 15.4L6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                />
              </svg>
            </a>
            <ul
              className="link-sublist collapse"
              id="collapseTwo"
            >
              <li>
                <a
                  className="list-item"
                  href="#"
                >
                  <span>
                    Link list 2
                  </span>
                </a>
              </li>
              <li>
                <a
                  className="list-item"
                  href="#"
                >
                  <span>
                    Link list 2
                  </span>
                </a>
              </li>
              <li>
                <a
                  className="list-item"
                  href="#"
                >
                  <span>
                    Link list 2
                  </span>
                </a>
              </li>
            </ul>
          </li>
          <li>
            <a
              aria-controls="collapseThree"
              aria-expanded="false"
              className="list-item large medium right-icon collapsed"
              data-toggle="collapse"
              href="#collapseThree"
              onClick={[Function]}
            >
              <span>
                Link list 3
              </span>
              <svg
                className="icon icon-primary icon-sm sm"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6 15.4L6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                />
              </svg>
            </a>
            <ul
              className="link-sublist collapse"
              id="collapseThree"
            >
              <li>
                <a
                  className="list-item"
                  href="#"
                >
                  <span>
                    Link list 3
                  </span>
                </a>
              </li>
              <li>
                <a
                  className="list-item"
                  href="#"
                >
                  <span>
                    Link list 3
                  </span>
                </a>
              </li>
              <li>
                <a
                  className="list-item"
                  href="#"
                >
                  <span>
                    Link list 3
                  </span>
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </nav>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/NavScroll Posizionamento a fondo pagina con linea a sinistra 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      className="navbar it-navscroll-wrapper navbar-expand-lg it-bottom-navscroll it-left-side"
    >
      <button
        aria-controls="navbarNav"
        aria-expanded="false"
        aria-label="Toggle navigation"
        className="custom-navbar-toggler"
        data-target="#navbarNav"
        onClick={[Function]}
        type="button"
      >
        <span
          className="it-list"
        />
        1. Introduzione
      </button>
      <div
        className="navbar-collapsable"
        id="navbarNav"
        style={
          Object {
            "display": "none",
          }
        }
      >
        <div
          className="overlay"
          style={
            Object {
              "display": "none",
            }
          }
        />
        <div
          className="close-div sr-only"
        >
          <button
            className="btn close-menu"
            type="button"
          >
            <span
              className="it-close"
            />
            close
          </button>
        </div>
        <a
          className="it-back-button"
          href="#"
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
        >
          <svg
            className="icon align-top icon-primary icon-sm sm"
            style={
              Object {
                "ariaHidden": true,
              }
            }
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.6 17.2L9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
            />
          </svg>
          <span>
            Back 
          </span>
        </a>
        <div
          className="menu-wrapper"
        >
          <div
            className="link-list-wrapper"
          >
            <h3
              className="no_toc"
            >
              header
            </h3>
            <ul
              className="link-list"
            >
              <li
                className="nav-item active"
              >
                <a
                  className="nav-link active"
                  href="#"
                >
                  <span>
                    1. Introduzione 
                  </span>
                </a>
                <ul
                  className="link-list"
                >
                  <li
                    className="nav-link active"
                  >
                    <a
                      className="nav-link active"
                      href="#"
                    >
                      <span>
                        1.1 Nested Item (active) 
                      </span>
                    </a>
                    <ul
                      className="tertiary link-list"
                    >
                      <li
                        className="nav-link"
                      >
                        <a
                          className="nav-link"
                          href="#"
                        >
                          <span>
                            1.1.1 Nested Item 
                          </span>
                        </a>
                      </li>
                      <li
                        className="nav-link"
                      >
                        <a
                          className="nav-link"
                          href="#"
                        >
                          <span>
                            1.1.2 Nested Item 
                          </span>
                        </a>
                      </li>
                      <li
                        className="nav-link"
                      >
                        <a
                          className="nav-link"
                          href="#"
                        >
                          <span>
                            1.1.3 Nested Item 
                          </span>
                        </a>
                      </li>
                    </ul>
                  </li>
                  <li
                    className="nav-link"
                  >
                    <a
                      className="nav-link"
                      href="#"
                    >
                      <span>
                        1.2 Nested Item 
                      </span>
                    </a>
                  </li>
                  <li
                    className="nav-link"
                  >
                    <a
                      className="nav-link"
                      href="#"
                    >
                      <span>
                        1.3 Nested Item 
                      </span>
                    </a>
                  </li>
                </ul>
                <a
                  className="nav-link"
                  href="#"
                >
                  <span>
                    2. List item 
                  </span>
                </a>
                <ul
                  className="link-list"
                >
                  <li
                    className="nav-link"
                  >
                    <a
                      className="nav-link"
                      href="#"
                    >
                      <span>
                        2.1 Nested Item 
                      </span>
                    </a>
                    <ul
                      className="tertiary link-list"
                    >
                      <li
                        className="nav-link"
                      >
                        <a
                          className="nav-link"
                          href="#"
                        >
                          <span>
                            2.1.1 Nested Item 
                          </span>
                        </a>
                      </li>
                      <li
                        className="nav-link"
                      >
                        <a
                          className="nav-link"
                          href="#"
                        >
                          <span>
                            2.1.2 Nested Item 
                          </span>
                        </a>
                      </li>
                      <li
                        className="nav-link"
                      >
                        <a
                          className="nav-link"
                          href="#"
                        >
                          <span>
                            2.1.3 Nested Item 
                          </span>
                        </a>
                      </li>
                    </ul>
                  </li>
                  <li
                    className="nav-link"
                  >
                    <a
                      className="nav-link"
                      href="#"
                    >
                      <span>
                        2.2 Nested Item 
                      </span>
                    </a>
                  </li>
                  <li
                    className="nav-link"
                  >
                    <a
                      className="nav-link"
                      href="#"
                    >
                      <span>
                        2.3 Nested Item 
                      </span>
                    </a>
                  </li>
                </ul>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </nav>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/NavScroll Posizionamento in testa alla pagina con linea a destra 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      className="navbar it-navscroll-wrapper navbar-expand-lg it-top-navscroll it-right-side"
    >
      <button
        aria-controls="navbarNavB"
        aria-expanded="false"
        aria-label="Toggle navigation"
        className="custom-navbar-toggler"
        data-target="#navbarNavB"
        onClick={[Function]}
        type="button"
      >
        <span
          className="it-list"
        />
        1. Introduzione
      </button>
      <div
        className="navbar-collapsable"
        id="navbarNavB"
        style={
          Object {
            "display": "none",
          }
        }
      >
        <div
          className="overlay"
          style={
            Object {
              "display": "none",
            }
          }
        />
        <div
          className="close-div sr-only"
        >
          <button
            className="btn close-menu"
            type="button"
          >
            <span
              className="it-close"
            />
            close
          </button>
        </div>
        <a
          className="it-back-button"
          href="#"
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
        >
          <svg
            className="icon align-top icon-primary icon-sm sm"
            style={
              Object {
                "ariaHidden": true,
              }
            }
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.6 17.2L9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
            />
          </svg>
          <span>
            Back 
          </span>
        </a>
        <div
          className="menu-wrapper"
        >
          <div
            className="link-list-wrapper"
          >
            <h3
              className="no_toc"
            >
              header
            </h3>
            <ul
              className="link-list"
            >
              <li
                className="nav-item active"
              >
                <a
                  className="nav-link active"
                  href="#"
                >
                  <span>
                    1. Introduzione 
                  </span>
                </a>
                <ul
                  className="link-list"
                >
                  <li
                    className="nav-link active"
                  >
                    <a
                      className="nav-link active"
                      href="#"
                    >
                      <span>
                        1.1 Nested Item (active) 
                      </span>
                    </a>
                    <ul
                      className="tertiary link-list"
                    >
                      <li
                        className="nav-link"
                      >
                        <a
                          className="nav-link"
                          href="#"
                        >
                          <span>
                            1.1.1 Nested Item 
                          </span>
                        </a>
                      </li>
                      <li
                        className="nav-link"
                      >
                        <a
                          className="nav-link"
                          href="#"
                        >
                          <span>
                            1.1.2 Nested Item 
                          </span>
                        </a>
                      </li>
                      <li
                        className="nav-link"
                      >
                        <a
                          className="nav-link"
                          href="#"
                        >
                          <span>
                            1.1.3 Nested Item 
                          </span>
                        </a>
                      </li>
                    </ul>
                  </li>
                  <li
                    className="nav-link"
                  >
                    <a
                      className="nav-link"
                      href="#"
                    >
                      <span>
                        1.2 Nested Item 
                      </span>
                    </a>
                  </li>
                  <li
                    className="nav-link"
                  >
                    <a
                      className="nav-link"
                      href="#"
                    >
                      <span>
                        1.3 Nested Item 
                      </span>
                    </a>
                  </li>
                </ul>
                <a
                  className="nav-link"
                  href="#"
                >
                  <span>
                    2. List item 
                  </span>
                </a>
                <ul
                  className="link-list"
                >
                  <li
                    className="nav-link"
                  >
                    <a
                      className="nav-link"
                      href="#"
                    >
                      <span>
                        2.1 Nested Item 
                      </span>
                    </a>
                    <ul
                      className="tertiary link-list"
                    >
                      <li
                        className="nav-link"
                      >
                        <a
                          className="nav-link"
                          href="#"
                        >
                          <span>
                            2.1.1 Nested Item 
                          </span>
                        </a>
                      </li>
                      <li
                        className="nav-link"
                      >
                        <a
                          className="nav-link"
                          href="#"
                        >
                          <span>
                            2.1.2 Nested Item 
                          </span>
                        </a>
                      </li>
                      <li
                        className="nav-link"
                      >
                        <a
                          className="nav-link"
                          href="#"
                        >
                          <span>
                            2.1.3 Nested Item 
                          </span>
                        </a>
                      </li>
                    </ul>
                  </li>
                  <li
                    className="nav-link"
                  >
                    <a
                      className="nav-link"
                      href="#"
                    >
                      <span>
                        2.2 Nested Item 
                      </span>
                    </a>
                  </li>
                  <li
                    className="nav-link"
                  >
                    <a
                      className="nav-link"
                      href="#"
                    >
                      <span>
                        2.3 Nested Item 
                      </span>
                    </a>
                  </li>
                </ul>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </nav>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
